[package]
name = "lue-lue-backend"
version = "0.1.0"
edition = "2021"
authors = [ "M4tt1-Coder <matthisgeissler@gmail.com>" ]
license = "MIT"
repository = ""
description = "Lue Lue Backend for the Lue Lue game"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.6.0", features=['http', 'axum', 'd1'] }
worker-macros = { version="0.6.0", features=['http'] }
axum  = { version = "0.8.4", features=["tokio", "json"] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
uuid = { version = "1.17.0", features = ["v4", "js"] }
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
async-stream = "0.3.6"
chrono = "0.4.41"
