[package]
name = "lue-lue-backend"
version = "0.1.0"
edition = "2021"
authors = [ "M4tt1-Coder <matthisgeissler@gmail.com>" ]
license = "MIT"
repository = "M4tt1-Coder/LueLue-Backend"
description = "Lue Lue Backend for the Lue Lue game"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.6.1", features = ['http', 'axum', "d1"] }
worker-macros = { version="0.6.1", features = ['http'] }
axum  = { version = "0.8.4", default-features = false, features = ["json"] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
axum-macros = "0.5.0"
axum-valid = "0.24.0"
uuid = { version = "1.18.0", features = ["v4", "js"] }
chrono = "0.4.41"
log = "0.4.27"
wasm-bindgen = "0.2.100"
rand_chacha = "0.9.0"

# ______________
# futures = "0.3.31"
# async-stream = "0.3.6"

[dev-dependencies]

